--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<script>
+  if (!localStorage.getItem("hardil_splash_done")) {
+    window.location.replace("splash.html");
+  }
+</script>
 <!-- APP LOGO OVERLAY -->
 
 
