--- a/splash.html
+++ b/splash.html
@@ -118,12 +118,8 @@ setTimeout(() => {
 </html>
 
 <script>
-  // Total animation duration (match your storyboard)
-  const TOTAL_TIME = 2500;
-
   setTimeout(() => {
-    localStorage.setItem("hardil_splash_done", "true");
     window.location.replace("index.html");
-  }, TOTAL_TIME);
+  }, 3000); // exactly 5 seconds
 </script>
 
