--- a/splash.html
+++ b/splash.html
@@ -119,7 +119,10 @@ setTimeout(() => {
 
 <script>
   setTimeout(() => {
-    window.location.replace("index.html");
-  }, 3000); // exactly 5 seconds
-</script>
+    // Mark splash as completed AFTER animation
+    sessionStorage.setItem("harDilOpened", "true");
 
+    // Go to main app
+    window.location.replace("index.html");
+  }, 3000); // 3 seconds animation
+</script>
